--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <head>
 	<title>首页</title>
 	<meta http-equiv="content-type" content="text/html; charset=UTF-8" />
-	<meta http-equiv="Cache-Control" name="no-store" />
 	<meta http-equiv="window-target" content="_top" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 	<meta name="HandheldFriendly" content="true" />
@@ -17,7 +16,8 @@
 	<style>
 li{font-size:1.4rem;color:#000}
 .w20{width:20px}
-.mui-btn-block{padding:12px 0;}
+.mui-btn-block{padding:12px 0;box-shadow: ;}
+
 	</style>
 <script type="text/javascript" charset="utf-8">
 //取消浏览器的所有事件，使得active的样式在手机上正常生效
@@ -129,9 +129,7 @@ function preateClear(){
 		</script>
 </head>
 <body>
-	<header class="mui-bar mui-bar-nav">
-		<h1 class="mui-title">移动端总结</h1>
-	</header>
+	<header class="mui-bar mui-bar-nav"><h1 class="mui-title">移动端总结</h1></header>
 	<section class="mui-content">
 		<article>
 			<p>从入门到现在做一个总结,以下内容包括JS插件,都是日常经常遇到的问题.</p>
